[package]
name = "rust-experiment"
version = "0.1.0"
authors = ["Dmitry Egorov <degorov86@gmail.com>"]

[dependencies.elmesque]
git = "https://github.com/mitchmindtree/elmesque.git"

[dependencies.pistoncore-glutin_window]
git = "https://github.com/PistonDevelopers/glutin_window.git"
version = "*"

[dependencies.piston]
git = "https://github.com/PistonDevelopers/piston.git"
version = "*"

[dependencies.shader_version]
git = "https://github.com/PistonDevelopers/shader_version"
#version = "*"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs"

[dependencies.piston-gfx_texture]
git = "https://github.com/PistonDevelopers/gfx_texture.git"
version = "*"

[dependencies.gfx_device_gl]
git = "https://github.com/gfx-rs/gfx_device_gl.git"
version = "*"

[dependencies.piston2d-gfx_graphics]
git = "https://github.com/PistonDevelopers/gfx_graphics.git"
version = "*"

[dependencies.piston2d-graphics]
git = "https://github.com/PistonDevelopers/graphics.git"

[dependencies]
num = "*"
