[package]
name = "rust-experiment"
version = "0.1.0"
authors = ["Dmitry Egorov <degorov86@gmail.com>"]

[dependencies.elmesque]
git = "https://github.com/mitchmindtree/elmesque.git"

[dependencies.pistoncore-glutin_window]
git = "https://github.com/PistonDevelopers/glutin_window.git"

[dependencies.piston]
git = "https://github.com/PistonDevelopers/piston.git"

[dependencies.shader_version]
git = "https://github.com/PistonDevelopers/shader_version"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs"

[dependencies.piston-gfx_texture]
git = "https://github.com/PistonDevelopers/gfx_texture.git"

[dependencies.gfx_device_gl]
git = "https://github.com/gfx-rs/gfx_device_gl.git"

[dependencies.piston2d-gfx_graphics]
git = "https://github.com/PistonDevelopers/gfx_graphics.git"

[dependencies.piston2d-graphics]
git = "https://github.com/PistonDevelopers/graphics.git"

[dependencies.piston-viewport]
git = "https://github.com/PistonDevelopers/viewport.git"

[dependencies.fps_counter]
git = "https://github.com/pistondevelopers/fps_counter.git"

[dependencies.piston2d-drag_controller]
git = "https://github.com/PistonDevelopers/drag_controller.git"

[dependencies.nalgebra]
git = "https://github.com/sebcrozet/nalgebra.git"

[dependencies]
num = "*"
rand = "*"
